--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon --ignore data/ src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier:write": "prettier --write \"{,!(node_modules|dist|build|coverage)/**/}*.{js,json,vue}\"",
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +23,16 @@
     "@types/node-schedule": "^1.3.2",
     "@types/nunjucks": "^3.1.5",
     "@types/puppeteer": "^5.4.4",
+    "husky": "^7.0.4",
     "nodemon": "^2.0.12",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
